[package]
name = "entelix-tokenizer-hf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
description = "entelix vendor-accurate TokenCounter wrapping HuggingFace `tokenizers` — Llama / Qwen / Mistral / DeepSeek and any tokenizer.json source"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
entelix-core = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
