[package]
name = "entelix-tool-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
description = "entelix proc-macro — #[tool] attribute for typed-input tool authoring on top of entelix-tools::SchemaTool"
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
entelix-core = { workspace = true }
entelix-tools = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
