[package]
name = "entelix-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
description = "entelix built-in tools — http_fetch, search adapter trait, calculator (web-only subset; no fs / shell — invariant 9)"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints]
workspace = true

[features]
default = []
# `sandboxed` — `Sandbox`-trait-backed tools that delegate shell /
# code execution / filesystem access to an operator-supplied
# isolation backend (E2B, Modal, Lambda, …). Off by default so the
# generic-purpose surface stays free of coding-shape opinions; opt
# in when building a coding agent or any agent that needs sandboxed
# IO. Pulls in `SandboxedShellTool`, `SandboxedCodeTool`, the three
# `Sandboxed{Read,Write,ListDir}FileTool` variants, `CodePolicy`,
# `ShellPolicy`, `ShellPolicyError`, `SandboxSkill` (Anthropic
# Claude Skills `SKILL.md` layout), and the `SandboxResource`
# helper. Invariant 9 is preserved — no `std::fs` or
# `std::process` import lands in this crate even with the feature
# enabled; everything routes through `entelix_core::sandbox::Sandbox`.
sandboxed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
entelix-core = { workspace = true }
entelix-memory = { workspace = true }
entelix-tool-derive = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hickory-resolver = { workspace = true }
idna = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
wiremock = { workspace = true }
